--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,13 +3,13 @@
     <form [formGroup]="registerForm" (ngSubmit)="submit(registerForm.value, registerForm.valid)" novalidate autocomplete="off">
       <div class="form-group">
         <input type="text" name="name" class="form-control" formControlName="name" [(ngModel)]="userDetail.name">
-        <div *ngIf="registerForm.controls['name'].hasError('required') || registerForm.prisitne " class="alert alert-danger">
+        <div *ngIf="registerForm.controls['name'].hasError('required') || registerForm.pristine " class="alert alert-danger">
           Name is required
         </div>
       </div>
       <div class="form-group">
         <input type="text" name="lastName" class="form-control" formControlName="lastName" [(ngModel)]="userDetail.lastName">
-        <div *ngIf="registerForm.controls['lastName'].hasError('required') || registerForm.prisitne " class="alert alert-danger">
+        <div *ngIf="registerForm.controls['lastName'].hasError('required') || registerForm.pristine " class="alert alert-danger">
           LastName is required
         </div>
       </div>
